changed java version